--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jquery": "^3.5.11",
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "jquery": "^3.6.0",
     "parcel-bundler": "^1.12.5"
   }
 }
